--- a/style.css
+++ b/style.css
@@ -1,44 +1,128 @@
-html{
+html {
   font-size: 62.5%;
+  height:100%;
 }
-body{
+body {
+  height:100%;
+}
+.container{
   width: 980px;
   margin: 0 auto;
+  min-height:100%;
+  position:relative;
+  min-height: 100%;
 }
-ul{
+ul {
   margin: 0;
   padding: 0;
 }
-li{
+li {
   list-style: none;
 }
-.header{
-  background-color:#F5B4B3;
+.header {
+  background-color: #F5B4B3;
   height: 50px;
   font-size: 1.5rem;
 }
-.top_menu li{
-  float:left;
-  width:auto;
+ul.top_menu {
+  float: right;
 }
-.top_menu li a{
-  color:#fff;
-  text-decoration:none;
-  display:block;
-  padding:15px;
+.top_menu li {
+  float: left;
+  width: auto;
 }
-.top_menu li a:hover{
-  text-decoration:underline;
+.top_menu li a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 15px;
 }
-.logo_image{
+.top_menu li a:hover {
+  text-decoration: underline;
+}
+.logo_image {
   width: 110px;
   margin: 0;
-  float:left;
+  float: left;
 }
 .clearfix:after{
   content:"";
   display:block;
   clear:both;
 }
+.image_area{
+  width:100%;
+}
 
+.side_menu li{
+  background-color:#F5B4B3;
+  height:6rem;
+  margin-bottom:10px;
+}
+.side_menu li:hover{
+  opacity:0.6;
+}
+.side_menu li a{
+  font-size: 2rem;
+  color:#fff;
+  text-decoration: none;
+  display: block;
+  padding: 2rem;
+}
+.banner img{
+  width:100%;
+}
+.banner{
+  margin-top:20px;
+}
+.banner a:hover{
+  opacity:0.6;
+}
+.side_menu{
+  width:300px;
+  float:left;
+}
+.wrapper{
+  margin-top:10px;
+  padding-bottom: 100px;
+}
+.content{
+  width: 660px;
+  margin-left:20px;
+  float: left;
+  font-size: 1.5rem;
+}
+.news{
+  height:200px;
+  background-color: #FCE8E7;
+  padding:20px;
+  overflow:scroll;
+  line-height:2rem;
+}
 
+.footer{
+  background-color: #4D4D4D;
+  height: 100px;
+  width : 100%;
+  position: absolute;
+  bottom: 0;
+  display:table;
+}
+
+.footer p{
+  font-size: 1rem;
+  color: #fff;
+  text-align:center;
+  vertical-align:middle;
+  display:table-cell;
+}
+.banner-content{
+  padding-top:10px;
+  display:table;
+}
+.banner-content p{
+  display:table-cell;
+}
+.banner-content img{
+  width:100%;
+}
